plugins/groovy/testdata/highlighting/ModifiersInPackageAndImportStatements.groovy
<error descr="Package definiton cannot have modifiers">private</error> <error descr="Package definiton cannot have modifiers">final</error> package x;

<error descr="Package definiton cannot have modifiers">final</error> import java.lang.Object;